--- a/styles/style.css
+++ b/styles/style.css
@@ -97,3 +97,49 @@ header nav a {
   background-color: rgba(254, 161, 1, 0.572);
   cursor: pointer;
 }
+/* banner hero section  */
+.hero_section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3em;
+}
+.hero_content {
+  /* max-width: 60%; */
+  border: 2px solid rebeccapurple;
+  margin-top: 6em;
+}
+
+.hero_content h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  line-height: 61px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.hero_content p {
+  color: rgb(17, 17, 17);
+
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.hero_content button {
+  color: rgb(255, 255, 255);
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: left;
+  border-radius: 12px;
+
+  background: rgb(17, 17, 17);
+  border-radius: 0.75rem;
+  padding: 0.75em 1em;
+}
+.hero_content button:hover {
+  cursor: pointer;
+  background: rgba(17, 17, 17, 0.366);
+}
