--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
   box-sizing: border-box;
 }
 body {
-  max-width: 1220px;
+  max-width: 1158px;
   margin: 0 auto;
 }
 header {
@@ -97,17 +97,24 @@ header nav a {
   background-color: rgba(254, 161, 1, 0.572);
   cursor: pointer;
 }
+
 /* banner hero section  */
 .hero_section {
+  /* height: 29em; */
+  border: 2px solid rgba(60, 179, 114, 0.509);
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3em;
 }
 .hero_content {
-  /* max-width: 60%; */
-  border: 2px solid rebeccapurple;
-  margin-top: 6em;
+  /* border: 2px solid rebeccapurple; */
+  max-width: 40rem;
+
+  min-height: 17rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .hero_content h1 {
@@ -120,16 +127,16 @@ header nav a {
 .hero_content p {
   color: rgb(17, 17, 17);
 
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 400;
-  line-height: 2rem;
+  line-height: 1.5rem;
   letter-spacing: 0%;
   text-align: left;
 }
 .hero_content button {
   color: rgb(255, 255, 255);
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 30px;
   letter-spacing: 0%;
   text-align: left;
@@ -138,8 +145,36 @@ header nav a {
   background: rgb(17, 17, 17);
   border-radius: 0.75rem;
   padding: 0.75em 1em;
+  width: fit-content;
 }
 .hero_content button:hover {
   cursor: pointer;
   background: rgba(17, 17, 17, 0.366);
+}
+.hero_image img {
+  object-fit: cover;
+}
+
+@media screen and (max-width: 600px) {
+  .hero_section {
+    flex-direction: column-reverse;
+  }
+  .hero_content {
+    align-items: center;
+  }
+  .hero_content h1 {
+    font-family: Quicksand;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+  .hero_content p {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
 }
