--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
   font-weight: 400;
   font-style: normal;
 }
+
 .raleway-font {
   font-family: 'Raleway', serif;
   font-optical-sizing: auto;
@@ -13,7 +14,9 @@
   font-style: normal;
 }
 /* shared style  */
+
 .hide {
+  visibility: hidden;
   display: none;
 }
 .orange {
@@ -50,9 +53,9 @@ body {
   margin: 0 auto;
 }
 header {
-  /* height: 4rem; */
+  max-height: 4rem;
   /* border: 2px solid rgb(254, 163, 1); */
-  padding: 0.5rem 0;
+  /* padding: 0.5rem 0; */
 }
 header nav {
   display: flex;
@@ -61,8 +64,8 @@ header nav {
   /* border: 1px solid rebeccapurple; */
 }
 header nav div img {
-  /* width: 4rem;
-  height: 3rem; */
+  max-width: 3.8rem;
+  min-height: 3.8rem;
   object-fit: contain;
 }
 header nav div h3 {
@@ -73,10 +76,11 @@ header nav div h3 {
   letter-spacing: 0%;
   text-align: left;
 }
-header nav div,
-ul {
+nav div,
+nav ul {
   display: flex;
   align-items: center;
+  justify-content: center;
   list-style: none;
 }
 header nav a {
@@ -91,13 +95,13 @@ header nav a {
 }
 .nav_btn {
   width: 12rem;
-  height: 4rem;
+  height: 3.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(254, 163, 1);
   border: none;
-  border-radius: 0.75rem;
+  border-radius: 0.5rem;
   color: rgb(255, 255, 255);
 
   font-size: 1.25em;
@@ -108,7 +112,16 @@ header nav a {
   background-color: rgba(254, 161, 1, 0.572);
   cursor: pointer;
 }
+.menubar {
+  /* border: 1px solid rebeccapurple; */
+  visibility: hidden;
+  width: 3rem;
+  height: 2rem;
+  display: flex;
 
+  text-align: center;
+  padding: 0.5rem;
+}
 /* banner hero section  */
 .hero_section {
   /* height: 29em; */
@@ -163,10 +176,24 @@ header nav a {
   background: rgba(17, 17, 17, 0.366);
 }
 .hero_image img {
+  width: 100%;
   object-fit: cover;
 }
 
 @media screen and (max-width: 576px) {
+  header nav div img {
+    max-width: 2.8rem;
+    min-height: 2.8rem;
+  }
+  nav h3,
+  nav ul,
+  nav aside {
+    display: none;
+  }
+  nav .menubar {
+    visibility: visible;
+    display: block;
+  }
   .hero_section {
     flex-direction: column-reverse;
   }
