--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
 .heading_h2 {
   color: rgb(0, 0, 0);
   font-family: Quicksand;
-  font-size: 46px;
+  font-size: 2.8rem;
   font-weight: 700;
   line-height: 57.5px;
   letter-spacing: 0%;
@@ -180,6 +180,97 @@ header nav a {
   object-fit: cover;
 }
 
+/* Standard_Curriculum section  */
+.Standard_Curriculum {
+  border: 2px solid rebeccapurple;
+  max-height: 760px;
+  background-image: url('../assets/bg.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+}
+.card_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  gap: 2rem;
+}
+.card {
+  /* Section */
+  position: relative;
+  /* width: 367.8px; */
+  height: 476.78px;
+  padding: 2.5rem;
+
+  box-sizing: border-box;
+  border: 0.94px solid rgb(222, 245, 255);
+  border-radius: 18.86px;
+
+  box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+#kinder {
+  background: linear-gradient(
+      180deg,
+      rgb(222, 245, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+#emargincy_color {
+  background: linear-gradient(
+      180deg,
+      rgb(255, 244, 220),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+#emargincy_color button {
+  color: rgb(240, 170, 0);
+}
+#middle_color {
+  background: linear-gradient(
+      180deg,
+      rgb(238, 225, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgba(255, 255, 255, 0.479);
+}
+#middle_color {
+  color: rgb(135, 0, 255);
+}
+
+.card h4 {
+  color: rgb(32, 32, 32);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 30.65px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.card p {
+  color: rgb(128, 128, 128);
+  font-size: 15.09px;
+  font-weight: 500;
+  line-height: 28.3px;
+  letter-spacing: 0%;
+}
+.card button {
+  border: none;
+  border-radius: 5px;
+  color: rgb(100, 200, 255);
+  font-size: 15.09px;
+  font-weight: 700;
+  line-height: 28.3px;
+  letter-spacing: 0%;
+  text-align: center;
+}
 @media screen and (max-width: 576px) {
   header nav div img {
     max-width: 2.8rem;
@@ -214,5 +305,9 @@ header nav a {
     line-height: 18px;
     letter-spacing: 0%;
     text-align: center;
+  }
+
+  .card_container {
+    grid-template-columns: 1fr;
   }
 }
